# din3990

./: README.md  example.py  pyproject.toml
din3990/: __init__.py  _din3990_11.py  din3990_1.py  din3990_11.py  din3990_5.py
examples/: example_1.py
tests/: test_1.py
