[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "din3990"
version = "0.1.0"
description = "Implementation of DIN 3990 - Calculation of load capacity of cylindrical gears"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [{name = "hanslhansl", email = "p4u1_1@posteo.at"}]
dependencies = [
    "colorama",
    "scipy",
    "din3962 @ git+https://github.com/hanslhansl/din3962.git"
]

[tool.setuptools]
packages = ["din3990"]